2007-08-07  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclEnv.c:	improve environ handling on Mac OS X (adapted
	* unix/tclUnixPort.h:	from Apple changes in Darwin tcl-64).

	* unix/Makefile.in:	add support for compile flags specific to
				object files linked directly into executables.

	* unix/configure.in (Darwin): only use -seg1addr flag when prebinding;
	use -mdynamic-no-pic flag for object files linked directly into exes;
	support overriding TCL_PACKAGE_PATH in environment.

	* unix/configure: autoconf-2.13

2007-07-19  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclParse.c:	In contexts where interp and parsePtr->interp
	might be different, be sure to use the latter for error reporting.

2007-07-05  Don Porter  <dgp@users.sourceforge.net>

	* library/init.tcl (unknown):	Corrected inconsistent error message
	in interactive [unknown] when empty command is invoked. [Bug 1743676]

2007-06-30  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclBinary.c (Tcl_BinaryObjCmd): De-fang an instance of the
	shared-result anti-pattern. [Bug 1716704]

2007-06-30  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* generic/tclThread.c: Prevent RemeberSyncObj() from growing the sync
	object lists by reusing already free'd slots, if possible.
	See discussion on Bug 1726873 for more information.

2007-06-29  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclAlloc.c:		on Darwin, ensure memory allocated by
	* generic/tclThreadAlloc.c:	the custom TclpAlloc()s is aligned to
	16 byte boundaries (as is the case with the Darwin system malloc).

2007-06-27  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCmdMZ.c:	Corrected broken trace reversal logic in
	* generic/tclTest.c:	TclCheckInterpTraces that led to infinite loop
	* tests/basic.test:	when multiple Tcl_CreateTrace traces were set
	and one of them did not fire due to level restrictions.  [Bug 1743931].

2007-06-23  Daniel Steffen  <das@users.sourceforge.net>
