@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: load.test,v 1.11.2.1 2004/09/14 17:02:56 das Exp $
+# RCS: @(#) $Id: load.test,v 1.11.2.2 2007/08/14 06:34:13 das Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
@@ -44,7 +44,12 @@ set alreadyTotalLoaded [info loaded]
 # Certain tests require the 'teststaticpkg' command from tcltest
 
 ::tcltest::testConstraint teststaticpkg \
-    [string compare {} [info commands teststaticpkg]]
+	[string compare {} [info commands teststaticpkg]]
+
+# Test load-10.1 requires the 'testsimplefilesystem' command from tcltest
+
+::tcltest::testConstraint testsimplefilesystem \
+	[string compare {} [info commands testsimplefilesystem]]
 
 
 test load-1.1 {basic errors} {} {
@@ -201,7 +206,13 @@ test load-9.1 {Tcl_StaticPackage, load already-loaded package into another inter
     -result {{{{} Loadninepointone} {{} Tcltest}} {{{} Loadninepointone} {{} Tcltest}}} \
     -cleanup { interp delete child1 ; interp delete child2 }
 
-    
+test load-10.1 {load from vfs} \
+    -constraints [list $dll $loaded testsimplefilesystem] \
+    -setup {set dir [pwd]; cd $testDir; testsimplefilesystem 1} \
+    -body {list [catch {load simplefs:/pkgd$ext pkgd} msg] $msg} \
+    -result {0 {}} \
+    -cleanup {testsimplefilesystem 0; cd $dir; unset dir}
+
 # cleanup
 ::tcltest::cleanupTests
 return
